# stockwise

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .gitignore  main.py  pyproject.toml
backend/stockwise/: agent.py  graph.py  run_graph.py  state.py
backend/stockwise/nodes/: stock_worker.py  synthesizer.py
